# pico-vscode-setup

./: .gitignore  CMakeLists.txt  README.md  blink.c
